k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-example
  template:
    metadata:
      labels:
        app: hello-world-example
    spec:
      containers:
      - name: hello-world-example
        image: registry.hub.docker.com/temdockerr/tem-docker-public:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "300m"
          requests:
            cpu: "100m"
