k8s/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
spec:
  type: NodePort
  selector:
    app: hello-world-example
  ports:
    - protocol: TCP
      # Expose the service on the specified port internally within the cluster
      port: 3000 # 
      # Pod port
      targetPort: 3000 #
